# docs

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  changelog.mdx  docs.json  faq.mdx  favicon-new.mdx  glossary.mdx  introduction.mdx  logos.mdx  mint.json  mkdocs.yml  netlify.toml  pyproject.toml
APIs/: Check-api-key.mdx  Introduction.mdx
features/: ai.mdx  analytics.mdx  backend.mdx  cloud.mdx  code-mode.mdx  collaboration.mdx  custom-domain.mdx  deploy.mdx  design.mdx  dev-mode.mdx  figma-to-lovable.mdx  import-project.mdx  index.mdx  introduction.mdx  knowledge-files.mdx  knowledge.mdx  labs.mdx  launched.mdx  modes.mdx  npm-packages.mdx  precision-edit.mdx  private-projects.mdx  publish.mdx  security.mdx  self-hosting.mdx  seo-v2.mdx  seo-v3.mdx  seo.mdx  techstacks.mdx  visual-edit.mdx
images/: shopifyxlovable.avif
integrations/: 21stdev-integration.mdx  21stdev.mdx  Clerk.mdx  Frontend-API.mdx  Replicate.mdx  Shopify.mdx  ai-integration.mdx  ai-old-version.mdx  ai.mdx  artificial-intelligence-integration.mdx  build-with-url.mdx  chrome-extensions.mdx  clerk.mdx  cloud.mdx  connections-mcp.mdx  eleven-labs.mdx  firecrawl.mdx  frontend-api.mdx  git-integration.mdx  github.mdx  githubv2.mdx  index.mdx  introduction.mdx  lovable-api.mdx  make.mdx  mcp-servers.mdx  perplexity.mdx  prompt-integrations.mdx  replicate.mdx  resend.mdx  shopify.mdx  stripe.mdx  supabase.mdx
introduction/: faq.mdx  getting-started.mdx  introduction.mdx  messaging-limits.mdx  plans-and-credit-limits.mdx  plans-and-credits.mdx  welcome.mdx
prompting/: prompt-integrations.mdx  (+3 more)
(+78 files in other folders)
