[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
